# CLIuno-Rocket-template

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: ci.yaml
src/: main.rs
