[package]
name = "cliuno-rocket-template"
version = "2.0.1"
edition = "2021"
authors = ["RuM <cliuno.github.io>"]
description = "A template for a Rocket web server with CLIUno"
license = "APGL-3.0"
repository = "https://github.com/CLIuno/CLIuno-Rocket-template"

[dependencies]
rocket = "0.5.1"
okapi = "0.7.0"
dotenv = "0.15.0"
futures = "0.3"